# Lucas-Kanade

./: CMakeLists.txt  README.md
doc/: doxy.conf
src/: CMakeLists.txt  imgalign.cpp  imgcmp.cpp  imgproc.cpp
src/include/: imgalign.h  imgcmp.h  imgproc.h  mim.h  tools.h
test/: CMakeLists.txt
test/mim/: CMakeLists.txt  test_imgcmp.cpp  test_lucas_kanade.cpp  test_pyr_down.cpp  test_warp_affine.cpp
test/mim/perf/: CMakeLists.txt  perf_warp_affine.cpp
test/mim/tools/: CMakeLists.txt  test_tools.cpp  test_tools.h
